tests/compile/fail/explicit_test_case_no_parens.stderr
error: #[hegel::explicit_test_case] requires arguments.
       Usage: #[hegel::explicit_test_case(name = value, ...)]
 --> tests/compile/fail/explicit_test_case_no_parens.rs:2:1
  |
2 | #[hegel::explicit_test_case]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
